--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -74,60 +74,53 @@ Core d20 RPG - это проект по написанию набора прав
 
 ### [Материалы Антона Палихова]([Title](https://www.dmsguild.com/browse.php?author%253DAnton%2520Palikhov))
 
-electrum [Waterdeep in tables](https://www.dmsguild.com/product/247012/Waterdeep-in-tables?affiliate_id=759617)
+**electrum** [Waterdeep in tables](https://www.dmsguild.com/product/247012/Waterdeep-in-tables?affiliate_id=759617)
 
-copper [Baldur's Gate in Tables](https://www.dmsguild.com/product/294548/Baldurs-Gate-in-Tables?affiliate_id=759617)
+**electrum** [Press of Eberron](https://www.dmsguild.com/product/297874/Press-of-Eberron?affiliate_id=759617)
 
-silver [Press of Eberron](https://www.dmsguild.com/product/297874/Press-of-Eberron?affiliate_id=759617)
+**silver** [Flaming Fist](https://www.dmsguild.com/product/289077/Flaming-Fist?affiliate_id=759617)
 
-silver [Flaming Fist](https://www.dmsguild.com/product/289077/Flaming-Fist?affiliate_id=759617)
+**copper** [Baldur's Gate in Tables](https://www.dmsguild.com/product/294548/Baldurs-Gate-in-Tables?affiliate_id=759617)
 
-copper [Palant's guide to Exploring Sword Coast](https://www.dmsguild.com/product/314810/Palants-guide-to-Exploring-Sword-Coast?affiliate_id=759617)
+**copper** [Palant's guide to Exploring Sword Coast](https://www.dmsguild.com/product/314810/Palants-guide-to-Exploring-Sword-Coast?affiliate_id=759617)
 
-copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs-of-Forgotten-Realms?affiliate_id=759617)
+**copper** [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs-of-Forgotten-Realms?affiliate_id=759617)
+
+**copper** [Baldur’s Mouth Newspaper Template](https://www.dmsguild.com/product/315373/Baldurs-Mouth-Newspaper-Template?affiliate_id=759617)
 
 [Horses of Forgotten Realms](https://www.dmsguild.com/product/317625/Horses-of-Forgotten-Realms?affiliate_id=759617)
-
-
-[Palant's Guide to Combat](https://www.dmsguild.com/product/305891/Palants-Guide-to-Combat?affiliate_id=759617)
 
 [Однажды на постоялом дворе](https://www.dmsguild.com/product/323191/---?affiliate_id=759617)
 
 [Одного разу на постоялому дворі](https://www.dmsguild.com/product/437719/----?affiliate_id=759617)
 
-[Baldur’s Mouth Newspaper Template](https://www.dmsguild.com/product/315373/Baldurs-Mouth-Newspaper-Template?affiliate_id=759617)
-
 [Salvation bases and missions in tables](https://www.dmsguild.com/product/309280/Salvation-bases-and-missions-in-tables?affiliate_id=759617)
-
-[Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Armors and Helmets](https://www.dmsguild.com/product/278467/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Armors-and-Helmets?affiliate_id=759617)
-
-[Coins of Forgotten Realms in tables](https://www.dmsguild.com/product/314838/Coins-of-Forgotten-Realms-in-tables?affiliate_id=759617)
-
-[Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Boots](https://www.dmsguild.com/product/296982/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Boots?affiliate_id=759617)
-
-[Languages of Forgotten Realms in Table](https://www.dmsguild.com/product/308995/Languages-of-Forgotten-Realms-in-Table?affiliate_id=759617)
-
-[Baldur’s Gate in Tables](https://www.dmsguild.com/product/294548/Baldurs-Gate-in-Tables?affiliate_id=759617)
 
 [City Watch of Baldur’s Gate](https://www.dmsguild.com/product/294551/City-Watch-of-Baldurs-Gate?affiliate_id=759617)
 
+[Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Armors and Helmets](https://www.dmsguild.com/product/278467/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Armors-and-Helmets?affiliate_id=759617)
+
 [Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate](https://www.dmsguild.com/product/276163/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate?affiliate_id=759617)
 
-[Palant Excel Inventory template](https://www.dmsguild.com/product/247019/Palant-Excel-Inventory-template?affiliate_id=759617)
+[Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Boots](https://www.dmsguild.com/product/296982/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Boots?affiliate_id=759617)
+
+[Coins of Forgotten Realms in tables](https://www.dmsguild.com/product/314838/Coins-of-Forgotten-Realms-in-tables?affiliate_id=759617)
+
+[Languages of Forgotten Realms in Table](https://www.dmsguild.com/product/308995/Languages-of-Forgotten-Realms-in-Table?affiliate_id=759617)
+
+[Faerunian names - excel generator](https://www.dmsguild.com/product/439131/Faerunian-names--excel-generator?affiliate_id=759617)
 
 [Palant’s Guide to Combat](https://www.dmsguild.com/product/305891/Palants-Guide-to-Combat?affiliate_id=759617)
 
 [Auril Frostmaiden’s Holy Symbol](https://www.dmsguild.com/product/317569/Auril-Frostmaidens-Holy-Symbol?affiliate_id=759617)
 
-[Faerunian names - excel generator](https://www.dmsguild.com/product/439131/Faerunian-names--excel-generator?affiliate_id=759617)
-
 [Progress Clocks](https://www.dmsguild.com/product/317711/Progress-clocks?affiliate_id=759617)
 
 [Palant Word Template](https://www.dmsguild.com/product/294551/City-Watch-of-Baldurs-Gate?affiliate_id=759617)
 
-[Серебрянные пределы SM-01](https://www.dmsguild.com/product/294523/--SM01?affiliate_id%253D759617)
+[Palant Excel Inventory template](https://www.dmsguild.com/product/247019/Palant-Excel-Inventory-template?affiliate_id=759617)
 
-[Coins of Forgotten Realms in tables](https://www.dmsguild.com/product/314838/Coins-of-Forgotten-Realms-in-tables?affiliate_id=759617)
+[Серебрянные пределы SM-01](https://www.dmsguild.com/product/294523/--SM01?affiliate_id%253D759617)
 
 
 ### [Материалы Дмитрия Нелюбова](https://www.dmsguild.com/browse.php?author=Dmitry%20Nelyubov)
@@ -203,22 +196,16 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 ## НЕОПУБЛИКОВАННОЕ
 
-СМЕРТЕЛЬНЫЕ ПРЕДЕЛЫ
+~~СМЕРТЕЛЬНЫЕ ПРЕДЕЛЫ~~
 
-РУКОВОДСТВО ПО ВЫЖИВАНИЮ И ИССЛЕДОВАНИЮ
+~~РУКОВОДСТВО ПО ВЫЖИВАНИЮ И ИССЛЕДОВАНИЮ~~
 
 ## Прочие наши ресурсы
 
 [Архив статей с сайта Киборгов и Чародеев на базе Wordpress](https://archivecyborgsandmages.wordpress.com/) - служит лишь для хранения архива статей и переводов
 
-[Старый блог Киборгов и Чародеев на Wordpress](https://cyborgsandmages.wordpress.com/) не поддерживается
+[Старый блог Киборгов и Чародеев на Wordpress](https://cyborgsandmages.wordpress.com/) - не поддерживается
 
-[Старый блог Лига Авантюристов](https://adventurersleague.wordpress.com/) не поддерживается
+[Старый блог Лига Авантюристов](https://adventurersleague.wordpress.com/) - не поддерживается
 
-## HOMEBREWERY
-
-[РУКОВОДСТВО HOMEBREWERY]()
-
-Все необходимое для работы с Homebrewery выложено в соответствующем репозитории.
-
-[GITHUB CNM HOMEBREWERY](https://github.com/palikhov/CnM-Homebrewery)
+s
