--- a/src/content/posts/articles/old-waterdeep-newspaper.mdx
+++ b/src/content/posts/articles/old-waterdeep-newspaper.mdx
@@ -9,6 +9,6 @@ tags:
   - раздаточный материал
 ---
 
-![label](image.png)
+![ГОЛОС ГЛУБОКОВОДЬЯ](/images/images/VOICE-OF-WATERDEEP.png)
 
 ![label](https://archivecyborgsandmages.files.wordpress.com/2023/04/f27e4-111122_0127_1.png?w%253D716%2526zoom%253D2)
