--- a/src/content/posts/articles/about-social-mechanics-2.mdx
+++ b/src/content/posts/articles/about-social-mechanics-2.mdx
@@ -12,7 +12,13 @@ tags:
   - услуга
   - отношение
   - Социальные взаимодействия
-  - механика
+  - Социальные механики
+  - Механики
+  - Убеждение
+  - Репутация
+  - Слава
+  - Известность
+  - Заметки Паланта
 ---
 
 В предыдущей статье [Про социальные механики, часть 1. Репутация](https://cyborgsandmages.com/posts/articles/about-social-mechanics) я говорил о способе измерения социального капитала группы персонажей - Репутации.
