--- a/src/content/posts/articles/using-mdx.mdx
+++ b/src/content/posts/articles/using-mdx.mdx
@@ -257,3 +257,5 @@ import Creature from '~components/Creature.astro';
 ### Компоненты 5E
 
 Существа, предметы, и заклинания для 5E. Инструкцию по использованию этих компонентов смотрите в [Написание статей](/resources/authoring).
+
+{% creature id="purple-dragon-blade" /%}
