--- a/src/content/posts/articles/using-mdx.mdx
+++ b/src/content/posts/articles/using-mdx.mdx
@@ -258,3 +258,6 @@ import Creature from '~components/Creature.astro';
 
 Существа, предметы, и заклинания для 5E. Инструкцию по использованию этих компонентов смотрите в [Написание статей](/resources/authoring).
 
+<Creature id="purple-dragon-blade" />
+
+
