--- a/src/content/posts/srd/using-ability-scores.mdx
+++ b/src/content/posts/srd/using-ability-scores.mdx
@@ -195,7 +195,7 @@ tags:
 чудовищем, пытающимся открыть дверь, и авантюристом, пытающимся держать дверь
 закрытой, ничья означает, что дверь остается закрытой.
 
-#### НАВЫКИ<br>
+#### НАВЫКИ
 
 Характеристики покрывают широкий диапазон возможностей, включая навыки, которыми
 персонаж или чудовище может владеть. Навык отражает некий аспект характеристики,
@@ -737,7 +737,7 @@ tags:
 Барды, колдуны, паладины и чародеи используют Харизму при определении Сл
 спасбросков от накладываемых ими заклинаний.
 
-### СПАСБРОСКИ<br>
+### СПАСБРОСКИ
 
 Спасброски отражают вашу попытку сопротивляться заклинанию, ловушке, яду,
 болезни или другой подобной угрозе. Обычно это не вы решаете совершить
