--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -2,3 +2,9 @@
 title: Core d20 RPG - Правила НРИ на базе пятой редакции Подземелий и Драконов
 description: Созданная в сообществе Киборги и Чародеи система правил для НРИ
 ---
+
+Последняя рабочая версия: [Версия 0.17](https://1drv.ms/w/s!Atcrhwwo1lBA34BK9LraKX-y6kmn0w?e=MRyMBd  )
+
+Последняя версия для печати: [Версия для публикации](https://1drv.ms/w/s!Atcrhwwo1lBA34MDRyLh_UII6GCGfQ?e=rF3DlG)
+
+Справочник цен: [Справочник цен](https://1drv.ms/w/s!Atcrhwwo1lBA34Zyc4aJTXfDKECa2A?e=TXivVo)
