--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -7,4 +7,13 @@ description: Созданная в сообществе Киборги и Чар
 
 Последняя версия для печати: [Версия для публикации](https://1drv.ms/w/s!Atcrhwwo1lBA34MDRyLh_UII6GCGfQ?e=rF3DlG)
 
+---
+
 Справочник цен: [Справочник цен](https://1drv.ms/w/s!Atcrhwwo1lBA34Zyc4aJTXfDKECa2A?e=TXivVo)
+
+Действия [Действия](https://1drv.ms/w/s!Atcrhwwo1lBA2dM1YzRDMg03gFExVg?e=tekaaH)
+
+Базовые боевые приемы [Базовые боевые приемы](https://1drv.ms/w/s!Atcrhwwo1lBA2dMyCM_VzyPoHuZPGQ?e=PQCY66)
+
+Состояния [Состояния](https://1drv.ms/w/s!Atcrhwwo1lBA2dM4es-k2Vu9fId01A?e=gtN8VU)
+
