--- a/src/content/posts/core-d20/feats-2.mdx
+++ b/src/content/posts/core-d20/feats-2.mdx
@@ -7,7 +7,10 @@ tags:
   - Core d20 RPG
 ---
 
- [Предыдущая статья про черты](https://cyborgsandmages.com/posts/core-d20/feats-1)
+Ранее мы уже писали про черты: в [Предыдущая статья про черты](https://cyborgsandmages.com/posts/core-d20/feats-1) и а [Черты для школ боевых искусств с использованием боевых приемов и техник](https://cyborgsandmages.com/posts/core-d20/martial-traditions).
+
+Это следующая подборка черт.
+
 
 ## Тренировка доспехов  
 Примечание: Вы можете брать эту черту несколько раз  
