--- a/src/content/posts/core-d20/archetypes-index.mdx
+++ b/src/content/posts/core-d20/archetypes-index.mdx
@@ -10,7 +10,17 @@ tags:
 
 ## Варвар
 
+Тотемный воин
+
+Берсерк
+
+Скальд
+
 ## Бард
+
+Коллегия Знаний
+
+Коллегия Доблести
 
 ## Боец
 
@@ -26,15 +36,41 @@ tags:
 
 [Баннерет](https://cyborgsandmages.com/posts/core-d20/banneret-archetype)
 
+Тактик
+
+Стрелок
+
 ## Клерик
+
+Домен Войны
+
+Домен Магии
 
 ## Друид
 
+Круг Зверей
+
+Круг Земли
+
 ## Монах
+
+Путь Открытой ладони
+
+Путь тени
+
+Путь четырех стихий
+
+Кенсей
  
 ## Рейнджер
 
+Охотник
+
+Мастер зверей
+
 ## Паладин
+
+Клятва мести
 
 ## Плут
 
@@ -44,8 +80,20 @@ tags:
 
 ## Волшебник
 
+
+
+Некромант
+
+Общий маг
+
+Маг стрелок
+
 [Арканический рыцарь](https://cyborgsandmages.com/posts/core-d20/arcane-knight-wizard-archetype)
 
 ## Колдун
 
+
+
 ## Чародей
+
+Боевой чародей
