--- a/src/content/singles/roll20-guide.mdx
+++ b/src/content/singles/roll20-guide.mdx
@@ -10,6 +10,38 @@ date: 2023-07-23
 
 [Руководство по Roll20 для начинающих]()
 
+[Настройки, скрипты, макросы и советы по организации кампании в Roll20 для Adventurers League Organised Play и не только используя игровую систему D&D 5ed](https://github.com/palikhov/CnM_Palant_Roll20)
+
+[Горячие клавиши в Roll20](https://hackmd.io/kPWwm-DXTgCm9kAiMqgzcg)
+
+[Руководство по Roll20 и листу персонажа по D&D 5e](https://hackmd.io/2A-8TdUvRe6tN9YXpSBf5A)
+
+[Изменение внешнего вида Roll20 с использованием Stylish или Freestyler](https://hackmd.io/fe7vkY3fTCehFHsEPJL9hQ)
+
+[Основы бросков в Roll20](https://hackmd.io/J2ZatPyxQAS6eMQ_F2vHIQ)
+
+[Player macros (presetup)](https://hackmd.io/h_YG1Z2aRKqKKoi20Zx11g)
+
+[Title](https://github.com/palikhov/palant-roll20-guide)
+
+[Roll20 Resource Repository](https://github.com/palikhov/CnM-Roll20-resources)
+
+[Palant Roll20](https://github.com/palikhov/CnM_Palant_Roll20)
+
+[Roll20 DnD 5e modules](https://github.com/palikhov/roll20-module/tree/master)
+
+[gm api scripts](https://github.com/palikhov/waterdeepCustomRoll20Scripts)
+
+[Roll20 API Scripts](https://github.com/palikhov/Roll20APIScripts/tree/master)
+
+[Roll20 like a boss](https://github.com/palikhov/Roll20-Like-A-Boss)
+
+[5er20](https://github.com/palikhov/5etoolsR20)
+
+
+[Roll20 DnD 5e macros](https://github.com/palikhov/roll20-dnd-5e-macros)
+
+[Скрипты для ГМа](https://github.com/palikhov/CnM-GM-RPG-scripts)
 способ для проверки масс атак
 
 ```[[ {?{Number of Attackers}?{Advantage/Disadvantage|Normal,d20|Advantage,t[d20A]|Disadvantage,t[d20D]} + ?{To hit modifiers +|8}}>[[@{target|ac}]] ]]```
