--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -160,6 +160,8 @@ Core d20 RPG - это проект по написанию набора прав
 
 [Старое руководство по Roll20](https://cyborgsandmages.gitbook.io/palant-roll20-guide/)
 
+[Текущая страница проекта руководства по Roll20](https://cyborgsandmages.com/roll20-guide)
+
 ### Руководство по Foundry
 
 [Руководство по Foundry]()
