--- a/src/content/singles/roll20-guide.mdx
+++ b/src/content/singles/roll20-guide.mdx
@@ -10,7 +10,7 @@ date: 2023-07-23
 
 [Руководство по Roll20 для начинающих]()
 
-[Настройки, скрипты, макросы и советы по организации кампании в Roll20 для Adventurers League Organised Play и не только используя игровую систему D&D 5ed](https://github.com/palikhov/CnM_Palant_Roll20)
+[CnM Palant Roll20 Guide](https://github.com/palikhov/CnM_Palant_Roll20)
 
 [Горячие клавиши в Roll20](https://hackmd.io/kPWwm-DXTgCm9kAiMqgzcg)
 
@@ -22,15 +22,13 @@ date: 2023-07-23
 
 [Player macros (presetup)](https://hackmd.io/h_YG1Z2aRKqKKoi20Zx11g)
 
-[Title](https://github.com/palikhov/palant-roll20-guide)
+[Палант Roll20 Guide](https://github.com/palikhov/palant-roll20-guide)
 
 [Roll20 Resource Repository](https://github.com/palikhov/CnM-Roll20-resources)
 
 [Palant Roll20](https://github.com/palikhov/CnM_Palant_Roll20)
 
 [Roll20 DnD 5e modules](https://github.com/palikhov/roll20-module/tree/master)
-
-[gm api scripts](https://github.com/palikhov/waterdeepCustomRoll20Scripts)
 
 [Roll20 API Scripts](https://github.com/palikhov/Roll20APIScripts/tree/master)
 
@@ -41,7 +39,7 @@ date: 2023-07-23
 
 [Roll20 DnD 5e macros](https://github.com/palikhov/roll20-dnd-5e-macros)
 
-[Скрипты для ГМа](https://github.com/palikhov/CnM-GM-RPG-scripts)
+
 способ для проверки масс атак
 
 ```[[ {?{Number of Attackers}?{Advantage/Disadvantage|Normal,d20|Advantage,t[d20A]|Disadvantage,t[d20D]} + ?{To hit modifiers +|8}}>[[@{target|ac}]] ]]```
