--- a/src/content/singles/roll20-guide.mdx
+++ b/src/content/singles/roll20-guide.mdx
@@ -8,7 +8,7 @@ date: 2023-07-23
 
 [Старое руководство по Roll20 от Паланта](https://cyborgsandmages.gitbook.io/palant-roll20-guide/)
 
-[Руководство по Roll20 для начинающих]()
+[Руководство по Roll20 для начинающих](/basic-guide-roll20-by-basil.pdf)
 
 [CnM Palant Roll20 Guide](https://github.com/palikhov/CnM_Palant_Roll20)
 
