--- a/src/content/posts/articles/new-old-files.mdx
+++ b/src/content/posts/articles/new-old-files.mdx
@@ -6,6 +6,8 @@ tags:
   - перевод
   - OSR
   - hackandslash
+  - E5E
+  - Core d20 RPG
 ---
 
 
@@ -14,3 +16,5 @@ tags:
 [Базовое руководство игрока](/files/downloads/basic-player-manual.pdf)
 
 [Розетский камень OSR](/files/downloads/rosette-stone-osr-hackandslash.pdf)
+
+[Руководство Паланта по дикой местности, путешествиям и исследованию ](/files/downloads/palant-wilderness-survival-guide-v0995-11112022-rev12.pdf)
