--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -80,7 +80,7 @@ Core d20 RPG - это проект по написанию набора прав
 
 **silver** [Flaming Fist](https://www.dmsguild.com/product/289077/Flaming-Fist?affiliate_id=759617)
 
-**copper** [Baldur's Gate in Tables](https://www.dmsguild.com/product/294548/Baldurs-Gate-in-Tables?affiliate_id=759617)
+**silver** [Baldur's Gate in Tables](https://www.dmsguild.com/product/294548/Baldurs-Gate-in-Tables?affiliate_id=759617)
 
 **copper** [Palant's guide to Exploring Sword Coast](https://www.dmsguild.com/product/314810/Palants-guide-to-Exploring-Sword-Coast?affiliate_id=759617)
 
@@ -138,6 +138,8 @@ Core d20 RPG - это проект по написанию набора прав
 [E5E Palant Notes about Combat, 1](https://www.drivethrurpg.com/product/379531/E5E--Palant-Notes-about-Combat-Issue-1?affiliate_id=759617)
 
 [E5E Palant Notes about Combat, 2](https://www.drivethrurpg.com/product/400474/E5E--Palant-Notes-about-Combat-Issue-2?affiliate_id=759617)
+
+[Основной системный документ | Russian Translation of SRD 5.1](https://www.drivethrurpg.com/product/401790/----Russian-Translation-of-SRD-51)
 
 ### [C&W](https://www.drivethrurpg.com/browse/pub/15748/CampW)
 
