--- a/src/content/posts/core-d20/saving-throws-problems.mdx
+++ b/src/content/posts/core-d20/saving-throws-problems.mdx
@@ -19,9 +19,17 @@ tags:
 
 Например, Интеллект у волшебников, Телосложение у бойцов, Мудрость у Клериков, Ловкость у плутов.
 
+Профильный спасбросок растет за счет повышения и бонуса владения и за счет повышения профильной характеристики.
+
+Если спасбросок не по основной характеристике, но класс дает владение им, то рост идет только за счет бонуса владения.
+
+Не профильные спасброски по непрофильным характеристикам вряд ли будут расти вообще.
+
 ## Класс сложности заклинаний
 
 Класс сложности заклинаний у заклинателя определяется как 8+бонус владения заклинателя + бонус заклинательной характеристики.
+
+Т.е. при повышении уровня КС заклинаний растет и от повышения бонуса владения и от повышения заклинательной характеристики - от +2 до +6 и от +3 до +5 соответственно.
 
 ## Возникающая проблема на высоких уровнях
 
@@ -31,7 +39,11 @@ tags:
 
 Почему так? Потому что заклинательная характеристика у враждебного  заклинателя точно так же максимальна и при равном уровне - бонусы владения и бонусы характеристик будут равными, что и приводит к такому результату.
 
-Но для спасбросков, у которых нет владения, ситуация как правило гораздо хуже. По ним не только нет владения у персонажа но еще и сами значения характеристик будут гораздо ниже - например Интеллект у Варвара или Паладина или Сила у Плута.
+И даже для спасброска, которым владеет персонаж, но характеристика которого является не основной - шанс успешного совершения спасброска с уровнями будет падать.
+
+Но для спасбросков, у которых нет владения, ситуация как правило гораздо хуже. По ним не только нет владения у персонажа но еще и сами значения характеристик будут гораздо ниже - например Интеллект у Варвара или Паладина или Сила у Плута. 
+
+И шанс успешного совершения такого спасброска падает с двойной скоростью.
 
 А это приводит к практически автопровалам этих спасбросков.
 
