--- a/src/content/singles/srd-translate.mdx
+++ b/src/content/singles/srd-translate.mdx
@@ -4,6 +4,8 @@ description: Перевод основного системного справо
 date: 2023-08-07
 ---
 
+Перевод системного справочного документа 5.1 на русский язык
+
 [Страница продукта на drivethrurpg](https://www.drivethrurpg.com/product/401790/----Russian-Translation-of-SRD-51)
 
 [Github](https://palikhov.github.io/srd-dnd-5e-ru/)
