--- a/src/content/singles/srd-translate.mdx
+++ b/src/content/singles/srd-translate.mdx
@@ -24,19 +24,56 @@ date: 2023-08-07
 
 ## ЦЕЛЬ ПРОЕКТА
 
-
 ## НАД ПРОЕКТОМ РАБОТАЛИ
 
 ## ЛИЦЕНЗИЯ
 
+## ПОЛИТИКА ПО ВНЕСЕНИЮ ИЗМЕНЕНИЙ В ПЕРЕВОД SRD
+
+### Терминология
+
+Базовая терминология меняется только при наличии существенно лучшей альтернативы и с учетом взаимосвязей со всеми разделами.
+
+Названия заклинаний, классовых особенностей, особенностей существ меняются при наличии убедительных аргументов.
+
+### Формулировки
+
+Изменение формулировок происходит при указании на некорректность текущих формулировок или их неточность.
+
+### Использование глаголов
+
+Вы сотворяете заклинание.
+
+Вы наносите урон.
+
+Ваши хиты опускаются до 0.
+
+Вы завершаете короткий или длинный отдых.
+
+Вы получаете временные хиты.
+
+Вы совершаете проверку способности, и она либо успешна, либо нет.
+
+Вы совершаете спасбросок, и он успешен или нет.
+
+Вы совершаете атаку (или атакуете), и ваша атака попадает или промахивается (она’не удается или не удается).
+
+Вы снижаете хиты цели до 0.
+
+Вы восстанавливаете хиты.
+
+Вы восстанавливаете хиты цели.
+
+Вы наносите критическое попадание.
+
+Вы совершаете действие или используете свое действие, чтобы что-то сделать.
+
+Вы получаете урон.
+
+Вы используете особенность.
+
+Бонусным действием (действием, реакцией) вы что-то совершаете.
 
 
-
-
-https://srd.dnd-5e.org/
-
-
-Публикация а
-https://longstoryshort.app/srd/
 
 
