--- a/src/content/singles/srd-translate.mdx
+++ b/src/content/singles/srd-translate.mdx
@@ -18,6 +18,8 @@ date: 2023-08-07
 
 [ЗАКЛИНАНИЯ](https://1drv.ms/w/s!Atcrhwwo1lBA4Yw2e9m0rFGz9xg9jg?e=ywQVfg)
 
+[ВОЛШЕБНЫЕ ПРЕДМЕТЫ]()
+
 [СЛОВАРЬ](https://1drv.ms/x/s!Atcrhwwo1lBA19AYUgvoqvGKlfiWsA?e=OHrAUF) 
 
 ---
