--- a/src/content/posts/articles/economy-dnd-model-3.mdx
+++ b/src/content/posts/articles/economy-dnd-model-3.mdx
@@ -6,6 +6,7 @@ tags:
   - Экономика
   - Волшебные предметы
   - Ресурсы
+  - Ценообразование
 ---
 
 Это третья часть из цикла авторских материалов про экономическую модель пятой редакции и попытке решения её проблем.
