--- a/src/content/posts/articles/economy-dnd-model-4.mdx
+++ b/src/content/posts/articles/economy-dnd-model-4.mdx
@@ -8,6 +8,7 @@ tags:
   - Ресурсы
   - Свитки
   - Услуги заклинателей
+  - Ценообразование
 ---
 
 В первых трех частях этого цикла я говорил о способах оценки стоимости создания волшебных предметов.
