--- a/src/content/posts/articles/economy-dnd-model-5.mdx
+++ b/src/content/posts/articles/economy-dnd-model-5.mdx
@@ -11,6 +11,7 @@ tags:
   - Солдаты
   - Обученные наемники
   - Необученные наемники
+  - Ценообразование
 ---
 
 В первых четырех частях этого цикла я говорил о способах оценки стоимости создания волшебных предметов.
