--- a/src/content/posts/articles/economy-dnd-model-6.mdx
+++ b/src/content/posts/articles/economy-dnd-model-6.mdx
@@ -8,12 +8,35 @@ tags:
   - Ресурсы
   - Свитки
   - Ценообразование
+  - Tales of Valiant
+  - Kobold Press
 ---
+
+В первых пяти частях этого цикла я говорил о способах оценки стоимости создания волшебных предметов.
+
+[Часть 1, в которой приводился анализ базовых правил пятой редакции](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
+
+[Часть 2, в которой наметился подход к формированию цен](https://cyborgsandmages.com/posts/articles/economy-dnd-model-2)
+
+[Часть 3, примеры оценки стоимости волшебных предметов](https://cyborgsandmages.com/posts/articles/economy-dnd-model-3)
+
+[Часть 4, альтернативный подход к ценам создания свитков и услуг заклинателей](https://cyborgsandmages.com/posts/articles/economy-dnd-model-4)
+
+[Часть 5, услуги наемников](https://cyborgsandmages.com/posts/articles/economy-dnd-model-5)
 
 В новой книге от Kobold Press – их варианте хартбрейкера пятой редакции Tales of Valiant в разделе снаряжения авторы приводят раздел посвященный покупке и продаже волшебных предметов.
 
 Естественно, в рамках цикла статей про экономику пятой редакции я не мог не удержаться не посмотреть на их подход.
-Далее привожу перевод этого раздела.
+
+Но начну я с немного другого раздела, а именно смежного с темой пятой части цикла - стоимость услуг заклинателей - что именно пишет Кобольд Пресс про это в своей книге.
+
+
+## УСЛУГИ ЗАКЛИНАТЕЛЕЙ 
+
+Люди, сотворяющие заклинания, не являются обычными наемниками. Персонажи могут найти человека, готового сотворить заклинание в обмен на монету или услугу, но это редко бывает просто, и не существует установленных ставок оплаты. Как правило, чем выше круг желаемого заклинания, тем труднее найти того, кто его сотворит, и тем дороже оно стоит. 
+Нанять человека для сотворения относительно распространенного заклинания 1-го или 2-го круга, такого как лечение ран или опознание, можно в городе или поселке, и это может стоить от 10 до 50 зм (плюс стоимость любых дорогостоящих материальных компонентов). Чтобы найти человека, способного и желающего произнести заклинание более высокого круга, нужно отправиться в большой город, возможно, с университетом или известным храмом. Если заклинатель найден, то вместо оплаты он может попросить об услуге, которую могут оказать только искатели приключений, например, доставить редкий предмет из опасного места или пройти через кишащую монстрами пустыню, чтобы доставить что-то в далекое поселение.
+
+Далее привожу перевод раздела посвященного покупке и продаже волшебных предметов
 
 ## ПОКУПКА И ПРОДАЖА МАГИЧЕСКИХ ПРЕДМЕТОВ 
 Магические предметы стоят дорого, их трудно найти, трудно продать, а обладание ими приносит большую пользу. Персонажи не могут просто зайти в магазин и найти магические предметы в продаже.  
@@ -174,5 +197,5 @@ tags:
 3. Как и я, Кобольд Пресс отталкивают стоимость расходуемых волшебных предметов от круга эквивалентного заклинания, хоть и получают немного другое распределение стоимсоти предметов от круга заклинаний.
 4. Даны неплохие указания по определению стоимости волшебных предметов из основных правил пятой редакции, при этом учтены также и возможные отклонения от общего шаблона.
 
-Продолжение следует...
+[Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-7)
 
