--- a/src/content/posts/articles/economy-dnd-model-6.mdx
+++ b/src/content/posts/articles/economy-dnd-model-6.mdx
@@ -58,17 +58,17 @@ tags:
 Поскольку эти предметы имеют ограниченный срок службы, они дешевле и их легче найти, чем постоянные магические предметы. Самый простой способ определить цену расходных предметов - рассмотреть их преимущества так, как если бы эти предметы были заклинаниями. Если у них нет очевидных сравнений с заклинаниями, оценивайте их по редкости. В таблице "Ценообразование расходуемых предметовпо кругу заклинаний" даны рекомендации по ценообразованию расходных материалов таким образом.  
 
 Ценообразование расходуемых предметов по кругу заклинаний
-| Круг    | Стоимость  | Редкость      | Эквивалент расходуемого предмета                    |                      |
-|---------|------------|---------------|-----------------------------------------------------|----------------------|
-| Заговор | 10 gp      | Обычное       | зелье взбирания                                     | (Potion of climbing) |
-| 1-й     | 50 gp      | Обычные       | боеприпасы, +1                                      |                      |
-| 2-й     | 100 gp     | Необычные     | боеприпасы, +2                                      |                      |
-| 3-й     | 200 gp     | Необычное     | зелье газообразной формы                            |                      |
-| 4-й     | 350 gp     | Редкие        | боеприпасы, +3                                      |                      |
-| 5-й     | 650 gp     | Редкая        | стрела истребления                                  |                      |
-| 6-й     | 1 500 gp   | Очень редкое  | зелье высшего исцеления (Potion of supreme healing) |                      |
-| 7-й     | 2 500 gp   | Очень редкое  | масло бесплотности (Oil of etherealness)            |                      |
-| 8-й     | 5,000 gp   | Очень редкий  | свиток заклинаний (8-й круг)                        |                      |
+| Круг    | Стоимость  | Редкость      | Эквивалент расходуемого предмета                    |
+|---------|------------|---------------|-----------------------------------------------------|
+| Заговор | 10 gp      | Обычное       | зелье взбирания  (Potion of climbing)               |
+| 1-й     | 50 gp      | Обычные       | боеприпасы, +1                                      |
+| 2-й     | 100 gp     | Необычные     | боеприпасы, +2                                      |
+| 3-й     | 200 gp     | Необычное     | зелье газообразной формы                            |
+| 4-й     | 350 gp     | Редкие        | боеприпасы, +3                                      |
+| 5-й     | 650 gp     | Редкая        | стрела истребления                                  |
+| 6-й     | 1 500 gp   | Очень редкое  | зелье высшего исцеления (Potion of supreme healing) |
+| 7-й     | 2 500 gp   | Очень редкое  | масло бесплотности (Oil of etherealness)            |
+| 8-й     | 5,000 gp   | Очень редкий  | свиток заклинаний (8-й круг)                        |
 | 9-й     | 10,500 gp  | Легендарная   | свеча призыва (Candle of invocation)                |
 
 ## ЦЕНООБРАЗОВАНИЕ ЗАЧАРОВАННЫХ МАГИЧЕСКИХ ПРЕДМЕТОВ 
