--- a/src/content/posts/articles/economy-dnd-model-7.mdx
+++ b/src/content/posts/articles/economy-dnd-model-7.mdx
@@ -18,6 +18,7 @@ tags:
 
 [Часть 2, в которой наметился подход к формированию цен](https://cyborgsandmages.com/posts/articles/economy-dnd-model-2)
 
+[Часть 3, примеры оценки стоимости волшебных предметов](https://cyborgsandmages.com/posts/articles/economy-dnd-model-3)
 
 [Часть 4, альтернативный подход к ценам создания свитков и услуг заклинателей](https://cyborgsandmages.com/posts/articles/economy-dnd-model-4)
 
