--- a/src/content/posts/articles/economy-dnd-model-2.mdx
+++ b/src/content/posts/articles/economy-dnd-model-2.mdx
@@ -76,11 +76,9 @@ tags:
 
 Сразу добавим **дополнительные условия:**
 
-\--если заклинание требует расходуемого материального компонента, то необходимо добавить двойную стоимость этого компонента (если только заказчик сам его не предоставляет), а в отдельных случаях стоимость расходуемого компонента может быть и выше;
-
-\- если заклинание требует наличия определенного материального компонента, то в стоимость сотворения заклинания необходимо добавить 20% стоимости этого компонента;
-
-\- заклинания с временем сотворения более 1 часа также будут стоить дороже, при чем стоимость будет также учитывать и уровень заклинателя.
+- если заклинание требует расходуемого материального компонента, то необходимо добавить двойную стоимость этого компонента (если только заказчик сам его не предоставляет), а в отдельных случаях стоимость расходуемого компонента может быть и выше;
+- если заклинание требует наличия определенного материального компонента, то в стоимость сотворения заклинания необходимо добавить 20% стоимости этого компонента;
+- заклинания с временем сотворения более 1 часа также будут стоить дороже, при чем стоимость будет также учитывать и уровень заклинателя.
 
 В общем виде, на стоимость сотворения заклинания будет также влиять распространенность заклинателей определенного вида – клериков, волшебников и т.п. Например, в случае если волшебников или друидов в разы меньше клериков, то сотворение заклинаний из их (волшебников или друидов) списка заклинаний, недоступных клерикам, будет стоить в разы дороже. Например, если друидов в пять раз меньше клериков, то сотворение Роста растений будет стоить не 540 зм, а минимум 2700 зм, а возможно и больше.
 
