--- a/src/content/posts/articles/economy-dnd-model-3.mdx
+++ b/src/content/posts/articles/economy-dnd-model-3.mdx
@@ -168,15 +168,15 @@ tags:
 
 Заклинание 1-го круга, Концентрация, длительность 1 минута.
 
-Базовая стоимость: 20 зм.
+**Базовая стоимость:** 20 зм.
 
-Концентрация: без изменения стоимости.
+**Концентрация:** без изменения стоимости.
 
-Перманентный эффект: 20*60*10=12000 зм
+**Перманентный эффект:** 20\*60\*10=12000 зм
 
 Итоговая стоимость эффекта +2 КЗ – 12000 зм.
 
-Стоимость эффекта +1 – 3000 зм (оценивая зависимость ценности от бонуса как квадратичную) и стоимость эффекта +3 – 3000*3^2=27000 зм.
+Стоимость эффекта +1 – 3000 зм (оценивая зависимость ценности от бонуса как квадратичную) и стоимость эффекта +3 – 3000\*3^2=27000 зм.
 Для щитов, в виду их ограниченности стоимость эффекта уменьшается в 2 раза.
 
 ### БОНУС К СПАСБРОСКАМ
@@ -189,15 +189,15 @@ tags:
 
 Итоговая стоимость эффекта +2,5–24000, стоимость эффекта +1 следовательно 3840 зм, +2 – 15360 зм, +3 – 34560.
 
-Кольцо и плащ защиты
+### Кольцо и плащ защиты
 
 Кольцо и плащ защиты требуют настройки и дают своему владельцу +1 КЗ, +1 к спасброскам.
 
-Суммарная стоимость эффектов: 3840+3000=6840 зм
+**Суммарная стоимость эффектов:** 3840+3000=6840 зм
 
-Коэффициент от настройки: 0,75
+**Коэффициент от настройки:** 0,75
 
-Базовая стоимость: 6840*0,75=5130 зм
+**Базовая стоимость:** 6840\*0,75=5130 зм
 
 ### ЗЕЛЬЯ ЛЕЧЕНИЯ РАЗЛИЧНОЙ РЕДКОСТИ
 
@@ -221,39 +221,39 @@ tags:
 - 
 В качестве базового варианта стоит принять божественную милость, поскольку этот урон не фиксируется на одной цели и не имеет дополнительных свойств.
 
-#### Пламенный язык
+### Пламенный язык
 
 Меч пламенный язык дополнительно наносит при попадании 2к6 урона огнем, немного светится  и требует настройки.
 
 2к6 урона огнем можно расценивать как эффект 3его круга заклинаний (1к4 на первом, с учетом стандартной прогрессии ячеек можно экстраполировать что повышение до 2к4 было бы на 3ем круге, переход от лучистого урона к урону огнем позволяет игнорировать повышение кости урона на 1 размер).
 
-Стоимость эффекта урона: 5400 
+**Стоимость эффекта урона:** 5400 
 
-Стоимость эффекта свечения: 100 (как для заговора Свет)
+**Стоимость эффекта свечения:** 100 (как для заговора Свет)
 
-Влияние настройки: 0,75
+**Влияние настройки:** 0,75
 
-Итоговая стоимость: 5500*0,75=4125 зм.
+**Итоговая стоимость:** 5500\*0,75=4125 зм.
 
-#### Погибель великанов
+### Погибель великанов
 
-Дополнительный урон: 2к6 против великанов
+**Дополнительный урон:** 2к6 против великанов
 
-Дополнительный эффект: падение – эквивалент заклинаания Жир.
+**Дополнительный эффект:** падение – эквивалент заклинаания Жир.
 
-Дополнительный бонус к попаладанию и урону: аналог оружия +1
+**Дополнительный бонус к попаладанию и урону:** аналог оружия +1
 
-Стоимость эффекта урона: 5400 с учетом ограничения по цели – множитель x0,5 = 2700
+**Стоимость эффекта урона:** 5400 с учетом ограничения по цели – множитель x0,5 = 2700
 
-Бонусы к урону и попаданию: 1600 зм
+**Бонусы к урону и попаданию:** 1600 зм
 
-Стоимость эффекта падения: 1600 зм за счет повышенного Класса Сложности проверки и множитель из за ограничения целей x0,5 =  800 зм.
+**Стоимость эффекта падения:** 1600 зм за счет повышенного Класса Сложности проверки и множитель из за ограничения целей x0,5 =  800 зм.
 
-Итоговая стоимость:  5100 зм.
+**Итоговая стоимость:**  5100 зм.
 
-#### Солнечный клинок
+### Солнечный клинок
 
-Дополнительный урон: 1к8 лучистого урона против нежити
+**Дополнительный урон:** 1к8 лучистого урона против нежити
 
 Эквивалент оружия +2
 
@@ -273,6 +273,7 @@ tags:
 - редкие ингредиенты, чья редкость зависит от редкости предмета, но стоимость входит в общую стоимость создания.
   
 ### Wayfarer guide to Eberron
+
 Некоторые интересные позиции были обозначены в WGtE – например, минимальное значение навыка для создания предметов, связь редкости ингредиентов с показателем опасности существа, базовую стоимость предметов от редкости.
 
 ### СОСТАВЛЯЮЩИЕ ПРОЦЕССА СОЗДАНИЯ ВОЛШЕБНЫХ ПРЕДМЕТОВ
