--- a/src/content/posts/articles/economy-dnd-model-2.mdx
+++ b/src/content/posts/articles/economy-dnd-model-2.mdx
@@ -109,3 +109,7 @@ tags:
 Полученные значения также позволяют немного переопределить стоимость волшебных предметов от редкости – так для необычных предметов это может быть от 1000 до 5000 зм, для редких – от 5000 до 25000 зм, для очень редких – от 25000 до 75000 зм, а для легендарных от 75000 и до 250000 зм.
 
 [Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-3)
+
+## Примечание
+
+Отдельная благодарность @dororo_ro за его комментарии и указания на ошибки, опечатки и неточности.
