--- a/src/content/posts/articles/economy-dnd-model-4.mdx
+++ b/src/content/posts/articles/economy-dnd-model-4.mdx
@@ -126,4 +126,9 @@ tags:
 | 8               | 2560                                    | 12800                           |
 | 9               | 3645                                    | 18225                           |
 
+## Примечание
+
+Отдельная благодарность @dororo_ro за его комментарии и указания на ошибки, опечатки и неточности.
+
 [Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-5)
+
