--- a/src/content/posts/articles/economy-dnd-model-5.mdx
+++ b/src/content/posts/articles/economy-dnd-model-5.mdx
@@ -255,4 +255,9 @@ tags:
 | 13                   | 19      | 9                  | 855                |
 | 14                   | 20      | 9                  | 900                |
 
+## Примечание
+
+Отдельная благодарность @dororo_ro за его комментарии и указания на ошибки, опечатки и неточности.
+
 [Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-6)
+
