--- a/src/content/posts/articles/economy-dnd-model-6.mdx
+++ b/src/content/posts/articles/economy-dnd-model-6.mdx
@@ -197,5 +197,9 @@ tags:
 3. Как и я, Кобольд Пресс отталкивают стоимость расходуемых волшебных предметов от круга эквивалентного заклинания, хоть и получают немного другое распределение стоимсоти предметов от круга заклинаний.
 4. Даны неплохие указания по определению стоимости волшебных предметов из основных правил пятой редакции, при этом учтены также и возможные отклонения от общего шаблона.
 
+## Примечание
+
+Отдельная благодарность @dororo_ro за его комментарии и указания на ошибки, опечатки и неточности.
+
 [Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-7)
 
