--- a/src/content/posts/articles/economy-dnd-model-3.mdx
+++ b/src/content/posts/articles/economy-dnd-model-3.mdx
@@ -372,7 +372,11 @@ https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Ftheangrygm.com%2
 
 [Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-4)
 
-# Используемые источники
+## Примечание
+
+Отдельная благодарность @dororo_ro за его комментарии и указания на ошибки, опечатки и неточности.
+
+## Используемые источники
 
 1.	https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-1
 2.	https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-3
